--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: zoomr 
+Package: zoomr
 Title: Connect to Your 'Zoom' Data with R!
 Version: 0.0.0.9999
 Authors@R: 
@@ -6,11 +6,11 @@ Authors@R:
            family = "Umphlett",
            role = c("aut", "cre"),
            email = "christopher.umphlett@gmail.com"))
-Description: Facilitates making a connection to the 
-  'Zoom' API and executing various queries. You can use it to
-  __. The 'Zoom' documentation is 
-  available at <>. This package is not supported by 
-  'Zoom' (owner of the software).
+Description: Facilitates making a connection to the 'Zoom' API and executing
+  various queries. You can use it to get data on 'Zoom' webinars and 'Zoom'
+  meetings. The 'Zoom' documentation is available at 
+  <https://marketplace.zoom.us/docs/api-reference/zoom-api/>. This package is 
+  not supported by 'Zoom' (owner of the software).
 URL: https://github.com/chrisumphlett/zoomr
 BugReports: https://github.com/chrisumphlett/zoomr/issues
 License: CC0
@@ -19,8 +19,7 @@ Imports:
   dplyr (>= 1.0.0),
   magrittr (>= 1.5),
   jsonlite (>= 1.6.1),
-  purrr (>= 0.3.3),
   httr (>= 1.4.1),
-  tidyr (>= 1.0.0),
-  plyr (>= 1.8.6)
+  glue (>= 1.4.2),
+  rlang (>= 1.0.4)
 RoxygenNote: 7.1.2
