--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,16 @@
 
 export(generate_query_params)
 export(generate_url)
+export(get_registration_questions)
 export(get_webinar_details)
 export(get_webinar_participants)
 export(get_webinar_polls)
 export(get_webinar_qanda)
+export(get_webinar_registrants)
+export(list_webinars)
+importFrom(dplyr,"rename")
+importFrom(dplyr,"select")
 importFrom(glue,glue)
+importFrom(janitor,"clean_names")
 importFrom(magrittr,"%>%")
 importFrom(tidyr,"unnest")
