--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,9 +9,12 @@ export(get_webinar_polls)
 export(get_webinar_qanda)
 export(get_webinar_registrants)
 export(list_webinars)
+import(dplyr)
 importFrom(dplyr,"rename")
 importFrom(dplyr,"select")
 importFrom(glue,glue)
 importFrom(janitor,"clean_names")
 importFrom(magrittr,"%>%")
+importFrom(purrr,"map_dfr")
 importFrom(tidyr,"unnest")
+importFrom(tidyselect,"everything")
