--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,5 +23,7 @@ Imports:
   glue (>= 1.4.2),
   rlang (>= 1.0.4),
   tidyr (>= 1.1.4),
-  janitor (>= 2.1.0)
+  janitor (>= 2.1.0),
+  tidyselect (>= 1.1.1),
+  purrr (>= 0.3.4)
 RoxygenNote: 7.1.2
