Misc formatting and documentation
* Added a lot of `@import` and `@importFrom` comments to the Roxygen2 documentation.
* Removed some unneeded, commented out code.
* Updated some examples that referred to the wrong functions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,10 +12,12 @@ export(get_webinar_qanda)
 export(get_webinar_registrants)
 export(list_webinars)
 import(dplyr)
-importFrom(dplyr,"rename")
+import(httr)
 importFrom(dplyr,"select")
 importFrom(glue,glue)
+importFrom(httr,"content")
 importFrom(janitor,"clean_names")
+importFrom(jsonlite,"fromJSON")
 importFrom(magrittr,"%>%")
 importFrom(purrr,"map_dfr")
 importFrom(tidyr,"unnest")
