--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,10 +17,14 @@ import(dplyr)
 import(httr)
 importFrom(dplyr,"select")
 importFrom(glue,glue)
+importFrom(httr,"GET")
+importFrom(httr,"add_headers")
 importFrom(httr,"content")
 importFrom(janitor,"clean_names")
 importFrom(jsonlite,"fromJSON")
 importFrom(magrittr,"%>%")
 importFrom(purrr,"map_dfr")
 importFrom(tidyr,"unnest")
+importFrom(tidyselect,"all_of")
 importFrom(tidyselect,"everything")
+importFrom(utils,"URLencode")
