--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,27 @@
 Package: zoomr
 Title: Connect to Your 'Zoom' Data
-Version: 0.3.1.9000
+Version: 0.4.0.9000
 Authors@R: 
-    c(person(given = "Chris",
-           family = "Umphlett",
-           role = c("aut", "cre"),
-           email = "christopher.umphlett@gmail.com"))
+    c(
+      person(
+        given = "Chris",
+        family = "Umphlett",
+        role = c("aut", "cre"),
+        email = "christopher.umphlett@gmail.com"
+      ),
+      person(
+        given = "Paul",
+        family = "Schmidt",
+        role = c("ctb"),
+        email = "schmidtpaul1989@outlook.com"
+      )      
+    )
+           
+Authors@R: c(person(given = "Jane", family = "Doe", role = c("aut", "cre"), email = "jane.doe@example.com", comment = c(ORCID = "0000-0000-0000-0000")),
+             person(given = "John", family = "Smith", role = "ctb", comment = "Contributed a bug fix"),
+             person(given = "Alice", family = "Johnson", role = "ctb", comment = c(ORCID = "0000-0000-0000-0001")))
+           
+           
 Description: Facilitates making a connection to the 'Zoom' API and executing
   various queries. You can use it to get data on 'Zoom' webinars and 'Zoom'
   meetings. The 'Zoom' documentation is available at 
