--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,3 +27,4 @@ importFrom(purrr,"map_dfr")
 importFrom(tidyr,"unnest")
 importFrom(tidyselect,"all_of")
 importFrom(tidyselect,"everything")
+importFrom(utils,"URLencode")
